# jr3-mbed-firmware

./: .gitattributes  .gitignore  AccurateWaiter.lib  Atomics.lib  CITATION.cff  CMakeLists.txt  FastIO.lib  JR3.hpp  JR3Port.hpp  JR3PortRegister.hpp  Jr3.hpp  Jr3Controller.cpp  Jr3Controller.hpp  Motor.lib  README.md  atomic_bool.h  can-plotter.py  fixedpoint.lib  main.cpp  mbed-os.lib  mbed.bld  mbed_app.json  overclocking.hpp  plotter.py  utils.cpp  utils.hpp
AccurateWaiter/: AccurateWaiter.cpp  AccurateWaiter.h
FastIO/: FastIO.h  FastIO_Unsupported.h
FastIO/Devices/: FastIO_EFM32.h  FastIO_K20D50M_KPSDK.h  FastIO_KLXX.h  FastIO_LPC11U6X.h  FastIO_LPC11UXX.h  FastIO_LPC11XX.h  FastIO_LPC1768.h  FastIO_LPC43XX.h  FastIO_LPC81X.h  FastIO_NRF51822.h  FastIO_NUCLEO_F030.h  FastIO_STM32F4.h  FastIO_STM32L073XX.h
fixedpoint/: fixed_class.h  fixed_func.cpp  fixed_func.h
src/: Jr3Controller.hpp  overclocking.hpp
